# mcp-forge

./: .gitignore  =1.6.0  README.md  alerting_system.py  audit_logger.py  auth_config.schema.json  auth_config_example.json  authentication_system.py  auto_scaler.py  client.py  config_manager.py  forge_config.json  forge_config.schema.json  forge_config_example.json  forge_mcp_server.py  forge_mcp_server_plan.md  log_aggregator.py  logging_system.py  meta_mcp_server.py  meta_mcp_server_plan.md  metrics_collector.py  process_monitor.py  progress.sh  progress_tracker.py  protection_mechanisms.py  pyproject.toml  quota_config.schema.json  quota_config_example.json  quota_manager.py  request_validator.py  requirements.txt  resource_monitor.py  runtime_configurator.py  server_manager.py  shutdown_handler.py  status_reporter.py  storage_manager.py  test_protection.py
.github/workflows/: publish.yml  test.yml
docs/: api_specification.md  configuration.md  development_workflow.md  runtime_configuration.md  security_protection.md  storage.md  update_notes.md
docs/superpowers/plans/: 2026-04-01-mcp-forge-v2.md
docs/superpowers/specs/: 2026-04-01-mcp-forge-rewrite-design.md
llm/: agent_instructions.md  current_progress.md
src/mcp_forge/: __init__.py  add.py  cli.py  install.py  scaffold.py
template_system/: README.md  __init__.py  customization.py  template_manager.py
template_system/handlers/: __init__.py  claude_handler.py
template_system/templates/: __init__.py  base_server.py  claude_server.py
tests/: test_add.py  test_install.py  test_scaffold.py
(+11 files in other folders)
