[project]
name = "mcp-forge"
version = "2.0.0"
description = "Scaffold MCP server projects with sane defaults"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.16.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "anyio>=4.0.0",
    "pytest-anyio>=0.0.0",
]

[project.scripts]
mcp-forge = "mcp_forge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
